# claude-code-usage-bubble

./: Cargo.toml  LICENSE  NOTICE  README.md  build.rs
.github/workflows/: release.yml
docs/: release-process.md
plans/20260515-claude-code-usage-bubble-port/: phase-01-bootstrap-repo.md  phase-02-port-portable-modules.md  phase-03-build-bubble-window.md  phase-04-panel-and-orchestration.md  phase-05-polish-and-finishing.md  plan.md
plans/260516-0707-cleanroom-rewrite/: phase-01-infrastructure.md  phase-02-types-and-i18n.md  phase-03-creds-module.md  phase-04-providers-and-refresh.md  phase-05-tray-badges.md  phase-06-updater-and-remove-notice.md  plan.md
plans/260516-1730-github-release-auto-update/: phase-01-release-ci-workflow.md  phase-02-end-to-end-update-test.md  phase-03-docs-and-release-process.md  plan.md
plans/260518-0945-menu-restart-button/: phase-01-implement-restart-action.md  plan.md
plans/260521-1530-silent-update-no-cmd/: phase-01-foundation-cli-flags-native-spawn-helper-mutex-retry.md  phase-02-restart-path-replace-restart-app-with-native-createprocessw.md  phase-03-update-install-rename-move-native-spawn.md  phase-04-cleanup-tray-notification.md  phase-05-manual-end-to-end-verification.md  plan.md
plans/260523-2242-bubble-tail-bar-layout/: phase-01-lock-geometry.md  phase-02-apply-renderer-change.md  phase-03-validate-on-windows.md  plan.md
plans/260523-ui-ux-improvement-plan/: plan.md
plans/reports/: brainstorm-260516-0707-cleanroom-reimplementation.md  brainstormer-260516-1314-improvements.md  brainstormer-260518-0917-offscreen-bubble-recovery.md  brainstormer-260521-1530-silent-update-no-cmd.md  code-reviewer-260516-1314-full-project.md  code-reviewer-260518-0917-bubble-offscreen-clamp-fix.md  code-reviewer-260518-1029-restart-button-impl.md  derivation-audit-260516-0747.md  researcher-260516-1314-best-practices.md  ui-design-review-bubble.md  ui-render-code-review.md
res/: icon.rc
src/: app.rs  bubble.rs  diagnose.rs  main.rs  models.rs  native_interop.rs  panel.rs  poller.rs  settings.rs  tray_icon.rs  updater.rs  usage_color.rs
src/creds/: codex_auth.rs  local_fs.rs  mod.rs  wsl_bridge.rs
src/diag/: mod.rs
src/i18n/: detect.rs  mod.rs
src/i18n/locales/: de.toml  en.toml  es.toml  fr.toml  ja.toml  ko.toml  nl.toml  vi.toml  zh-TW.toml
src/localization/: dutch.rs  english.rs  french.rs  german.rs  japanese.rs  korean.rs  mod.rs  spanish.rs  traditional_chinese.rs
src/net/: mod.rs  winhttp.rs
src/os/: color.rs  dpi.rs  mod.rs  registry.rs  string.rs  theme.rs
src/tray/: badge.rs  callback.rs  mod.rs
src/update/: channel.rs  handoff.rs  install.rs  mod.rs  release.rs
src/usage/: anthropic.rs  chatgpt.rs  headers.rs  mod.rs  refresh.rs  registry.rs  types.rs
